@@ -789,6 +789,7 @@ dial-peer 1
  direction both
  exit
 !
+alias test bash command attach shell1 /rtr/ptyRun.bin /bin/bash
 !
 server telnet tel
  security authentication access
