@@ -12,7 +12,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.3.30-cur, done by cs@nop.<br/>
-tested: 2022-03-30 08:08:37, took 00:08:40, with 80 workers, on 2780 cases, 0 failed, 0 traces, 3 retries<br/>
+tested: 2022-03-30 08:53:41, took 00:07:57, with 80 workers, on 2780 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
