@@ -1,4 +1,3 @@
-aliases with sticky parameters
 disableable door code in temper
 quic
 update gtp stack to the latest standards
